# udemy-learning

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
py_100_days/: 11_BlackJack.ipynb  12_GuessNumber.ipynb  14_LowerHigher.ipynb  BlackJack.ipynb  Miscellanea.ipynb
py_100_days/15_coffe_machine/: coffee_machine.py  pyproject.toml  test_coffee_machine.py
py_100_days/16_coffee_machine_oop/: main.py
py_100_days/17_quiz_game/: question_model.py
py_100_days/CoffeMachine/: coffee_machine.py  main.py  (+1 more)
py_data_viz/: 001_arrays_mp.ipynb  002_mp_series.ipynb  003_mp_slice_pandas.ipynb  004_other_pandas.ipynb  005_inputs_outputs.ipynb  006_data_wrangler.ipynb  007_dataframes_wrangler.ipynb  Lec 11 - Universal Array Function.ipynb  Lec 15 - DataFrames.ipynb  Lec 22 - Summary Statistics.ipynb  Lec 23 - Missing Data.ipynb  Lec 26 - JSON with Python.ipynb  Lec 29 - Merge.ipynb  Lec 30 -Merge on Index.ipynb  Lec 33 - Reshaping.ipynb  Lec 34 - Pivoting.ipynb  Lec 35 - Duplicates in DataFrames.ipynb  Lec 36 - Mapping.ipynb  Lec 37 - Replace.ipynb  Lec 38 - Rename Index.ipynb  Lec 39 - Binning.ipynb  Lec 40 - Outliers.ipynb  Lec 41 - Permutation.ipynb  Lec 42 - GroupBy on DataFrames.ipynb  Lec 43 - Groupby on Dict and Series.ipynb  Lec 46 - Cross-Tabulation.ipynb  _exercise_01_lryx_to_qml-Copy1.ipynb  _exercise_01_lryx_to_qml.ipynb  textdata_in_mp003.csv
py_deep_dive_1/: Lesson1 Review.ipynb
py_postgres/: SQL_Bootcamp_2022.ipynb  challenges.sql  challenges_2.sql  challenges_3.sql  conditional_expressions.sql  conditional_expressions.txt  notebook_to_postgres.ipynb
(+2 files in other folders)
