[tool.poetry]
name = "coffemachine"
version = "0.1.0"
description = ""
authors = ["marcopizzolato-mp <pizzolatomarco@yahoo.it>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.3.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
